docs/content/v0.5/1.getting-started/2.installation.md
---
description: "How to install nuxt-auth."
---

# Installation

You can install `nuxt-auth` via `npm`, `yarn` or `pnpm`:
::code-group
```bash [npm]
npm i -D @sidebase/nuxt-auth@0.5.0
```
```bash [yarn]
yarn add --dev @sidebase/nuxt-auth@0.5.0
```
```bash [pnpm]
pnpm i -D @sidebase/nuxt-auth@0.5.0
```
::

::alert{type="info"}
Note that we try our best to keep `nuxt-auth` stable, but it is also a young module that is in active development. If you want to be extra sure nothing breaks, you should pin the patch version, e.g., by using `--save-exact` when running the install command.
::

`nuxt-auth` has `next-auth` as a peer-dependency. With all package managers except `npm` you must install the peer dependency alongside `nuxt-auth`:
::code-group
```bash [yarn]
yarn add next-auth@4.21.1
```
```bash [pnpm]
pnpm i next-auth@4.21.1
```
::

You can find all available `next-auth` versions [on npm](https://www.npmjs.com/package/next-auth?activeTab=versions). You do not need to install any other peer-dependencies in order to use `nuxt-auth`.

## Requirements

`nuxt-auth` only needs Nuxt 3 to run. In the future Nuxt 2 or Nuxt Bridge may be supported.
